--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search and Paginated Posts</title>
+    <title>Mardi Gras Parades</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Search and Paginated Posts</h1>
+    <h1>Search Parades</h1>
 
     <!-- Search input -->
     <input type="text" id="search" placeholder="Search posts by title...">
