--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mardi Gras Parades</title>
+    <title>Learners</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Search Parades</h1>
+    <h1>Search JS Courses</h1>
 
     <!-- Search input -->
     <input type="text" id="search" placeholder="Search posts by title...">
